--- a/WORDS WONDER.!!.html
+++ b/WORDS WONDER.!!.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WORDS WONDER.!! </title>
-    <link rel="stylesheet" href="css/hangman.css">
+    <link rel="stylesheet" href="hangman.css">
     <script src="hangwords.js" defer></script>
     <script src="hangman.js" defer></script>
 </head>
