--- a/WORDS WONDER.!!.html
+++ b/WORDS WONDER.!!.html
@@ -10,7 +10,7 @@
     <script src="hangman.js" defer></script>
 </head>
 <body>
-    <audio autoplay loop src="audio&video/dont_cry_naruto.mp3"></audio>
+    <audio autoplay loop src="dont_cry_naruto.mp3"></audio>
     <div class="game-modal">
         <div class="content">
             <img src="hangman-img/hangman-0.gif" alt="gif">
