--- a/wordswonder.!!.html
+++ b/wordswonder.!!.html
@@ -36,13 +36,19 @@ body{
 }
 @keyframes mo {
     0%{
+        opacity: 1;
+    }
+    25%{
         opacity: 0;
     }
     50%{
         opacity: 1;
     }
-    100%{
+    75%{
         opacity: 0;
+    }
+    100%{
+        opacity: 1;
     }
 }
 .name:nth-child(1) { animation-delay: 1s; }
