--- a/wordswonder.!!.html
+++ b/wordswonder.!!.html
@@ -12,13 +12,26 @@
     transition: all;
 }
 body{
-    background-color: black;
+    background: linear-gradient(-45deg,black,white,gray);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     transition: all;
 }
+@keyframes gradient {
+            0% {
+                background-position: 0% 25%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
+        }
 
 .heading{
     margin-left: 30px;
