--- a/wordswonder.!!.html
+++ b/wordswonder.!!.html
@@ -41,7 +41,7 @@ body{
     width: 100%;
     font-size: 100px;
     margin-top: 100px;
-    color: white;
+    color: black;
 }
 .name{
     opacity: 0;
